######################################################
#            PROJECT  : svpgm2txt                    #
#            VERSION  : 1.2                          #
#            DATE     : 08/2011                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

Version 1.2 (August 23, 2011)

     * Add optional fix to distinguish I/l using aspell.
     * Add optional fix to distinguish I/l using upper case/lower case rules.
     * Add optional fix to distinguish I/l by forcing using I or l.
     * Add optional fix to distinguish I/l by asking every time.

Version 1.1 (August 09, 2011)

     * Replace Character DB now use map instead of list for memory storage.
     * Remove option -m
     * Add manpage for command svpgm2txt
     * Add -U option to automatically use $HOME/.svpgm2txt.db file as database
     * Fix warnings in -Wall mode with GCC 4.5
     * Add -w option to setup space width threshold
     * Add base files for packaging (Fedora / Ubuntu / Gentoo)
     * Add two optional fixes for I/l recognition.

Version 1.0 (August 09, 2011)

     * First publication of svpgm2txt on GitHub
