@@ -19,7 +19,7 @@ svpgm2txt [OPTIONS] file1.pdm file2.pgm...
 
 ."""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .SH DESCRIPTION
-If you have already use the pgm2txt (http://subtitleripper.sourceforge.net/) command to extract perfect text from image files, you may be exceed by number of error it produce (0 vs O....). Those errors are mainly due to usage of GOCR (http://jocr.sourceforge.net/) as character recognition. GOCR is a generic tool, so can handle large type of text, but such complexity limit his efficiency.
+This work is inspired from pgm2txt (http://subtitleripper.sourceforge.net/) command to extract perfect text from image files. For fun, I rewrite my own OCR limiting it to perfect formed characters in numerical images. I also add some rules to automatically solve most of the I/l issues which arise with some fonts. As I didn't be a script calling gocr it provide faster scanning with equivalent mode than -d option of pgm2txt command to avoid 0/O, n/N, n/m, é/è... errors produced by gocr heuristics.
 .PP
 When trying to convert perfect formed text, we can done some assumptions about reproducibility over the text. This is what I done while writing svpgm2txt. I use the perfect text formatting limitation to simplify the implementation. When I say perfect formatting I mean not scanned document, but numerical text insert into images, so where identical characters are bit to bit similar.
 .PP
@@ -71,6 +71,9 @@ Provide a file listing PGM files to process. Each file must be separated by a li
 .TP
 .B \-L, \-\-lang=STRING
 Define the language to use for spell checking in conjunction of -i aspell only. You may use values like en_US of fr_FR...
+.TP
+.B \-m, \-\-mode=STRING
+Define the terminal mode to use to enable or disable color support : color, std, auto. Default is auto.
 .TP
 .B \-o, \-\-output-db=FILE
 Define the file in which to save the final DB which will cumulate all input DB plus new entries created by the scan.
