@@ -4,6 +4,7 @@ svpgm2txt (1.2-1) unstable; urgency=low
   * Add optional fix to distinguish I/l using upper case/lower case rules.
   * Add optional fix to distinguish I/l by forcing using I or l.
   * Add optional fix to distinguish I/l by asking every time.
+  * Permit to disable usage of color capability of termial, default is automatic detection.
 
  -- Sébastien Valat <sebastien.valat.dev@orange.fr>  Tue, 23 Aug 2011 21:23:20 +0200
 
