@@ -12,6 +12,7 @@ Version 1.2 (August 23, 2011)
      * Add optional fix to distinguish I/l using upper case/lower case rules.
      * Add optional fix to distinguish I/l by forcing using I or l.
      * Add optional fix to distinguish I/l by asking every time.
+	 * Permit to disable usage of color capability of termial, default is automatic detection.
 
 Version 1.1 (August 09, 2011)
 
